--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">ArduinoBluetoothCommander</string>
     <string name="default_device_name">Unnamed</string>
+    <string name="start_scan">Start scan</string>
+    <string name="stop_scan">Stop scan</string>
+    <string name="paired_devices">Paired Devices</string>
+    <string name="scanned_devices">Scanned Devices</string>
 </resources>
