--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="stop_scan">Stop scan</string>
     <string name="paired_devices">Paired Devices</string>
     <string name="scanned_devices">Scanned Devices</string>
-    <string name="server_name">BT Server\nReady to for connection…</string>
+    <string name="server_name">BT Server\nReady for connection…</string>
     <string name="devices_are_connected">Devices are connected</string>
     <string name="start_server">Start server</string>
     <string name="please_wait">Please wait…</string>
