--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="devices_are_connected">Devices are connected</string>
     <string name="start_server">Start server</string>
     <string name="please_wait">Please wait…</string>
-    <string name="is_disconnected">" is disconnected"</string>
-    <string name="was_disconnected">" was disconnected"</string>
+    <string name="connected">"connected"</string>
+    <string name="was_disconnected">"was disconnected"</string>
+    <string name="type_message">Type message</string>
+    <string name="send_message">Send message</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
 </resources>
