--- a/bluetoothchat/src/main/res/values/strings.xml
+++ b/bluetoothchat/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ArduinoBluetoothCommander</string>
+    <string name="app_name">Radio Set</string>
     <string name="default_device_name">Unnamed</string>
     <string name="start_scan">Start scan</string>
     <string name="stop_scan">Stop scan</string>
