--- a/wifiradioset/src/main/res/values/strings.xml
+++ b/wifiradioset/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="chat">Chat</string>
     <string name="network">Network</string>
     <string name="connected_to">Connected to</string>
+    <string name="press_back_button_again_to_leave">Press back button again to leave the conversation</string>
 </resources>
